--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,104 +1,27 @@
-* { 
-   margin: 0;
-   padding: 0;
-   text-decoration: none;
-   list-style: none;
-   font-family: 'Open Sans', sans-serif;
-   box-sizing: border-box;
-}
-
-a { 
-    color: inherit;
-}
-
-body { 
-    background-color: #F4E1FF;
-
-}
-
-
 header { 
-
-    border-bottom: 1px solid rgba(0, 0, 0, 0.06);
     display: flex;
-    justify-content: space-between;
-    padding: 24px 50px;
     align-items: center;
-
-
-
+    justify-content: space-between;
+    padding: 51px 33px;
+    height: 140px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 
     nav { 
-        ul { 
-            display: flex;
-            gap: 40px;
-            li { 
-                font-size: 30px;
-
-                .select { 
-                    width: 100%;
-                    color: red;
-                }
-            }
-        }
-    }
-
-    .login { 
         display: flex;
-        font-size: 21px;
-        align-items: center;
+        gap: 69px;
         
-        gap: 30px;
-        
-
-    
-        .btn-primary { 
-            cursor: pointer;
-            
-
-            display: flex;
-            background-color: #A2D2FF;
-            justify-content: center;
-
-            gap: 15px;
-
-            width: 185px;
-            height: 58px;
-
+        ul { 
             font-size: 21px;
-            align-items: center;
-            border-radius: 231px;
-
-            img { 
-                width: 100%;
-                height: 24px;
-                width: 24px;
-
-            }
+            height: 100%;
             
-            transition: .2s all;
-            &:hover { 
-                transition: .2s all;
-                transform: scale(1.1);
-                
-            }
-
         }
-        
     }
 
-}
-
-.section {
-    width: 100%;
-    display: flex;
-    justify-content: center;
+    .s-login { 
+        display: flex;
+        align-items: center;
+        font-size: 21px;
+        gap: 15px;
+    }
     
-    .banner-color { 
-        width: 100%;
-        background-color: #A2D2FF ;
-        height: 494px; 
-        margin-top: -10;
-
-    }
 }
